--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,13 @@
 }
 
 .block {
-  margin: 10px 0;
+  margin: 0 2px 20px;
 }
 
 .form-field:last-child {
   margin: 0;
+}
+
+.recomendation {
+  padding: 0;
 }
